<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />


    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/find"
            android:padding="10dp"
            android:background="@drawable/rounded_border"
            android:drawableStart="@drawable/ic_search"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" />

        <ImageView
            android:id="@+id/heart_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_heart" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_car" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_motorbike" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moto"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_food" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_all" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/payment_rewards_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="50dp"
        app:layout_constraintTop_toBottomOf="@id/button_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/ic_pay"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_pay" />
            <TextView
                android:id="@+id/payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_card"
                android:layout_marginStart="8dp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/ic_gorewards"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_rewards" />
            <TextView
                android:id="@+id/gorewards_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewards_points"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/promotion_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/payment_rewards_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/promotions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/promotion_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_promotion" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>
